--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </i>
 
             <div class="modal__video">
-                <iframe src="https://vimeo.com/user119414799/" width="1920" height="1080" frameborder="0"
+                <iframe src="https://player.vimeo.com/video/439302449" width="1920" height="1080" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
