--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             </i>
 
             <div class="modal__video">
-                <iframe src="https://player.vimeo.com/video/439302449" width="1920" height="1080" frameborder="0"
-                    allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/439302449" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
         </div>
